# mnemonic-external

./: Cargo.toml
.github/workflows/: rust-cargo-deny.yml  rust-clippy.yml  rust-test.yml
src/: error.rs  lib.rs  regular.rs  tests.rs
