[package]
name = "mnemonic-external"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
zeroize = {version = "1.8.1", features = ["derive"]}

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std", "sufficient-memory"]
std = []
sufficient-memory = []

[lib]
name = "mnemonic_external"
crate-type = ["lib"]
