[package]
name = "mnemonic-external"
description = "Mnemonic seed phrase processing with no-std and external memory capabilities"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = [
    "Alexander Slesarev <slesarew@gmail.com>",
    "Vera Abramova <abramova.vera@gmail.com>",
]
repository = "https://github.com/Alzymologist/mnemonic-external"
homepage = "https://github.com/Alzymologist/mnemonic-external"
documentation = "https://docs.rs/mnemonic-external"
keywords = ["no_std", "crypto", "seed", "mnemonic"]
edition = "2021"

[dependencies]
sha2 = { version = "0.10.8", default-features = false }
zeroize = {version = "1.8.1", features = ["derive"]}

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std", "sufficient-memory"]
std = []
sufficient-memory = []

[lib]
name = "mnemonic_external"
crate-type = ["lib"]
